Security with login fixed